Fixed link on mobile header

--- a/style.css
+++ b/style.css
@@ -96,9 +96,9 @@ main>section {
     
 } */
 
-/* .scroll-margin-top {
+.scroll-margin-top {
     scroll-margin-top: 80px;
-} */
+}
 
 /* Шрифти */
 
